feat: integrate backend APIs, setup local DB, fix security errors, and align display-v2 pages with high-end aesthetic