@@ -1,5 +1,8 @@
 package com.sjg.config;
 
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.sjg.entity.User;
+import com.sjg.mapper.UserMapper;
 import com.sjg.util.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -7,9 +10,12 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -17,15 +23,18 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
     private final JwtUtil jwtUtil;
+    private final UserMapper userMapper;
 
-    public SecurityConfig(JwtUtil jwtUtil) {
+    public SecurityConfig(JwtUtil jwtUtil, UserMapper userMapper) {
         this.jwtUtil = jwtUtil;
+        this.userMapper = userMapper;
     }
 
     @Bean
@@ -37,9 +46,9 @@ public class SecurityConfig {
                 .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
                 .requestMatchers("/api/public/**").permitAll()
                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                .requestMatchers("/api/admin/**").authenticated()
+                .requestMatchers("/api/admin/**").hasAuthority("admin")
                 .requestMatchers("/api/auth/**").authenticated()
-                .anyRequest().permitAll()
+                .anyRequest().authenticated()
             )
             .addFilterBefore(jwtFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
@@ -60,9 +69,14 @@ public class SecurityConfig {
                     String token = header.substring(7);
                     if (jwtUtil.validateToken(token)) {
                         String username = jwtUtil.getUsernameFromToken(token);
-                        var auth = new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(
-                                username, null, java.util.Collections.emptyList());
-                        org.springframework.security.core.context.SecurityContextHolder.getContext().setAuthentication(auth);
+                        User user = userMapper.selectOne(
+                                new LambdaQueryWrapper<User>().eq(User::getUsername, username));
+                        if (user != null) {
+                            var auth = new UsernamePasswordAuthenticationToken(
+                                    username, null,
+                                    List.of(new SimpleGrantedAuthority(user.getRole())));
+                            SecurityContextHolder.getContext().setAuthentication(auth);
+                        }
                     }
                 }
                 filterChain.doFilter(request, response);
